--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 
   <!-- Basic styling (no framework) -->
   <style>
+    .grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 12px;
+}
+
+.opp {
+  border: 1px solid #ddd;
+  padding: 12px;
+  border-radius: 8px;
+}
+
+.best {
+  border-color: #0aa;
+  background: #f0ffff;
+}
+
+.second {
+  border-color: #aaa;
+}
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
