--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
     <h1>KES Arbitrage Monitor</h1>
     <p>Binance & OKX • Live P2P Opportunities</p>
   </header>
-
+<h2>FXageAI – Retail Mode</h2>
+<p>Capital: <strong>KES 10,000</strong></p>
+<div id="grid" class="grid"></div>
   <div id="status">Loading opportunities…</div>
 
   <div id="opps"></div>
