--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   }
 
   header {
-    background: #161b22;
-    padding: 12px 16px;
-    font-weight: 600;
-    font-size: 18px;
-    border-bottom: 1px solid #30363d;
-  }
+  background: linear-gradient(135deg, #1f6feb, #238636);
+  padding: 14px 16px;
+  font-weight: 700;
+  font-size: 18px;
+  color: #ffffff;
+}
 
   .container {
     padding: 14px;
